vlib/v/checker/tests/match_expr_empty_branch.out
vlib/v/checker/tests/match_expr_empty_branch.vv:3:2: error: missing branch in `match` expression
    1 | _ := match true {
    2 |     true { 0 }
    3 |     false { }
      |     ~~~~~
    4 | }
